[package]
name = "inta"
version = "0.1.0"
authors = ["Akihito KIRISAKI <kirisaki@klaraworks.net>"]
license = "BSD-3-Clause"
edition = "2018"

description = "Interval arithmetic in Rust"
repository = "https://github.com/kirisaki/inta"
keyeords = ["numeric"]
categories = ["numeric"]
readme = "README.md"

[dependencies]
num-traits = "^0.2"
libc = "^0.2"
